styles.css
@import url('https://fonts.googleapis.com/css2?family=Rubik:wght@300..900&display=swap');

@font-face {
	font-family: 'Norse Bold';
	src: url(./assets/fonts/norse-bold.otf) format('opentype');
	font-weight: bold;
	font-style: normal;
}

:root {
	--bg-color-logo: rgba(0 0 0 / 0.5);
	--bg-color-primary: #f2f4f6;
	--bg-color-form: #fff;
	--bg-color-button: #596d48;
	--bg-color-instructions: #ffa500;
	--bg-color-error: #b30404;

	--border-color: #e5e7eb;
	--border-color-focus: #4682b4;

	--input-shadow: 0 0 10px #4682b4;
	--button-shadow: 5px 5px 5px 1px rgba(0, 0, 0, 0.3);

	--ff-body: 'Rubik', sans-serif;
	--ff-logo: 'Norse Bold', Arial, sans-serif;

	--fs-h1: 3rem; /* 48px */
	--fs-h2: 1.5rem; /* 24px */
	--fs-h3: 1.17rem; /* 18.72px */
	--fs-h4: 1rem; /* 16px */
	--fs-h5: 0.83rem; /* 13.28px */
	--fs-h6: 0.67rem; /* 10.72px */

	--fw-bold: 500;

	--spacer-xs: 0.5rem; /* 8px */
	--spacer-sm: 1rem; /* 16px */
	--spacer-md: 1.5rem; /* 24px */

	--width-logo-image: 2.5rem; /* 40px */

}

*,
*::before,
*::after {
	box-sizing: border-box;
}

* {
	margin: 0;
	padding: 0;
}

img {
	display: block;
	max-width: 100%;
}

input,
button {
	font: inherit;
}

p,
h1,
h2,
h3,
h4,
h5,
h6 {
	overflow-wrap: break-word;
}

body {
	line-height: 1.5;
	-webkit-font-smoothing: antialiased;
	min-height: 100svh;
	background: url(./assets/images/bee-sunflower.png);
	background-size: cover;
	background-position: center;
	background-repeat: no-repeat;
	font-family: var(--ff-body);
	font-size: var(--fs-h4);
	padding: var(--spacer-sm);
	display: flex;
	flex-direction: column;
	justify-content: space-between;
}

.sr-only {
	height: 1px;
	width: 1px;
	overflow: hidden;
	position: absolute;
	white-space: nowrap;
	clip: rect(1px, 1px, 1px, 1px);
	clip-path: inset(50%);
}

.logo {
	background-color: var(--bg-color-logo);
	border-radius: 5px;
	font-family: var(--ff-logo);
	color: var(--bg-color-form);
	display: flex;
	justify-content: center;
	align-items: center;
	gap: var(--spacer-sm);
	padding: var(--spacer-xs);
}

.logo__image {
	max-width: var(--width-logo-image);
}

.logo__name {
	font-size: var(--fs-h1);
	/* align-self: inherit; */
	margin-block-start: var(--spacer-sm);
}

main {
	border: 1px solid var(--bg-color-form);
	border-radius: 10px;
	overflow: hidden;
}

.intro {
	background-color: var(--bg-color-primary);
	font-weight: var(--fw-bold);
	font-size: var(--fs-h3);
	display: flex;
	flex-direction: column;
	gap: var(--spacer-xs);
}

.container {
	padding: var(--spacer-md);
}

.form__data {
	background-color: var(--bg-color-form);
	display: flex;
	flex-direction: column;
	gap: var(--spacer-sm);
}

.form__intro {
	display: flex;
	flex-direction: column;
	gap: var(--spacer-xs);
}

.form__pitch {
	font-weight: var(--fw-bold);
	font-size: var(--fs-h3);
}


.form__fields,
.form__fullname,
.form__contact-info,
.form__password {
	display: flex;
	flex-direction: column;
	gap: var(--spacer-md);
}


.form__label {
	display: block;
	text-transform: uppercase;
	font-size: var(--fs-h5);
}

.form__control {
	appearance: none;
	border: 1px solid var(--border-color);
	border-radius: 5px;
	padding: 0 var(--spacer-xs);
	width: 90%;
	background: none;
}

.form__control:focus {
	outline: none;
	border: 1px solid var(--border-color-focus);
	box-shadow: var(--input-shadow);
}

.pw__requirements {
	font-size: var(--fs-h6);
	font-weight: var(--fw-bold);
	background-color: var(--bg-color-instructions);
	/* display: block; */
	width: 90%;
	padding: 0.1rem 0.1rem;
	line-height: 1;
	margin-block-end: var(--spacer-xs);
}

.pw__requirements {
	display: none;
}

.pw__container:focus-within .pw__requirements {
	display: block;
}

.pw__container {
	position: relative;
}

.pw__error-message {
	visibility: hidden;
	position: absolute;
	width: fit-content;
	font-size: var(--fs-h6);
	font-weight: var(--fw-bold);
	color: var(--bg-color-form);
	bottom: -20px;
	left: 0;
	background-color: var(--bg-color-error);
	padding: 0.1rem 0.2rem;
	border-radius: 5px;
}

.pw__input:invalid:not(:placeholder-shown) ~ .pw__error-message {
	visibility: visible;
}

.pw__input:invalid:not(:placeholder-shown) {
	border: 2px solid var(--bg-color-error);
}

.pw__input:not(:placeholder-shown) ~ .pw__error-message {
	visibility: hidden;
}

.form__btn-link {
	background-color: var(--bg-color-primary);
	display: flex;
	flex-direction: column;
	align-items: flex-start;
	gap: var(--spacer-sm);
}

.button {
	background-color: var(--bg-color-button);
	padding: 0.3em 1.5em;
	border-radius: 5px;
	border: none;
	color: var(--bg-color-form);
	cursor: pointer;
	box-shadow: var(--button-shadow);
}

.login {
	text-decoration: none;
	color: var(--bg-color-button);
	font-weight: var(--fw-bold);
}

.footer {
	text-align: center;
	font-size: var(--fs-h5);
}

.attribution a,
.attribution a:visited {
	color: #000;
}


@media (min-width: 50rem) {
	:root {
		--width-logo-image: 5rem; /* 80px */
		--fs-h1: 5rem; /* 80px */
		--fs-h3: 1.5rem; /* 24px */
		--fs-h4: 1.25rem; /* 20px */

		--spacer-sm: 2rem; /* 24px */
		--spacer-md: 2rem; /* 32px */

		--input-width: 40%;
	}

	body {
		background: none;
		flex-direction: row;
		padding: 0;
		gap: 0;
		
	}

	header {
		width: 30%;
		position: relative;
		background: url(./assets/images/bee-sunflower.png);
		background-size: cover;
		background-position: center;
		background-repeat: no-repeat;
		flex-shrink: 0;
	}

	footer {
		position: absolute;
		width: 30%;
		bottom: 0;
	}

	.logo {
		position: absolute;
		top: 200px;
		width: 100%;
	}

	main {
		flex: 1;
		display: flex;
		flex-direction: column;
	}

	.intro {
		min-height: 30%;
		justify-content: flex-end;
	}

	.intro__pitch {
		max-width: 60ch;
	}

	.form {
		min-height: 70%;
		display: flex;
		flex-direction: column;
	}

	.form__data {
		position: relative;
        box-shadow: 0 8px 8px -4px rgba(0 0 0 / 0.3);
	}



	.form__fullname,
	.form__contact-info,
	.form__password {
		display: flex;
		flex-direction: row;
	}

	.form__group {
		width: 40%;
	}

	.pw__error-message {
		bottom: -15px;
		line-height: 1;
		width: fit-content;
	}

	.form__btn-link {
		flex: 1;
	}
}

